sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value getlength
		for(i<-0 to getlength-2){
                            ^